--- a/Ecommerce-backend/package.json
+++ b/Ecommerce-backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm i",
-    "start": "nodemon index.js"
+    "build": "npm i",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
